@startuml

class Store {
    - ArrayList<Admin> admin
    - ArrayList<Customer> customer
    - inventory: Inventory
    - ArrayList<Order> orders
    - Cart cart
    + addProduct(product: Product): void
    + removeProduct(product: Product): void
    + updateProduct(product: Product): void
    + getInventory(): Inventory
}

' Klasa bazowa dla użytkowników
abstract class User {
    - userID: int
    - username: String
    - password: String
    + login(username: String, password: String): boolean
}

' Klasa reprezentująca admina
class Admin extends User {
    - inventory: Inventory
    + addProduct(product: Product): void
    + removeProduct(product: Product): void
    + updateProduct(product: Product): void
}

class Cart {
    - Map<Product, Integer> products
    + addProduct(product: Product): void
    + removeProduct(product: Product): void
    + getTotalPrice(): double
    + updateProductQuantity(product: Product, quantity: int): void
}

' Klasa reprezentująca klienta
class Customer extends User {
    - address: Address
    + addToCart(product: Product): void
    + removeFromCart(product: Product): void
    + placeOrder(): Order
    + updateAddress(address: Address): void
}

' Klasa bazowa dla różnych rodzajów produktów
class Product {
    - productID: int
    - name: String
    - price: double
    - quantity: int
    - brand: String
    + getDetails(): String
    + updateQuantity(quantity: int): void
    + getBrand(): String
}

' Konkretne typy produktów dziedziczące po Product
class Phone extends Product {
    - model: String
    - screenSize: double
    + getModel(): String
}

class Laptop extends Product {
    - processor: String
    - ramSize: int
    + getProcessor(): String
}

class Tablet extends Product {
    - screenSize: double
    - storage: int
    + getStorage(): int
}

' Klasa reprezentująca zamówienie
class Order {
    - orderID: int
    - customer: Customer
    - products: List<Product>
    - totalAmount: double
    - date: Date
    + addProduct(product: Product): void
    + removeProduct(product: Product): void
    + calculateTotal(): double
}


' Klasa reprezentująca adres klienta
class Address {
    - street: String
    - city: String
    - postalCode: String
    - country: String
    - NumberOfStreet: int
}

' Klasa reprezentująca magazyn (Inventory)
class Inventory {
    - products: List<Product>
}

' Relacje
Store "1" o-- "1" Inventory : manages
Store "1" o-- "1" Cart
Store "1" o-- "0..*" User
Store "1" o-- "0..*" Order
Admin "1" o-- "1" Inventory : manages
Customer "1" o-- "0..*" Order : places
Order "1" o-- "0..*" Product : contains
Customer "1" *-- "1" Address : resides_at
Inventory "1" o-- "0..*" Product : contains

@enduml
